infra/k8s/api/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-server
spec:
  selector:
    app: api
  ports:
    - port: 8000
      targetPort: 8000
