infra/k8s/api/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-server-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - api.amang.json-server.win
      secretName: api-server-tls
  rules:
    - host: api.amang.json-server.win
      http:
        paths:
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: api-server
                port:
                  number: 8000
